--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="H5主页,个人主页,完整风格,引导页">
     <!-- <meta itemprop="image" content="./assets/9147.png" /> -->
     <meta name="google-adsense-account" content="ca-pub-1078287385751140">
-    <link rel="icon" href="C:\Users\September\Desktop\学习资源整合平台（服务器版）\static\usr\themes\cuckoo\assets\images\favicon.ico" type="image/png" />
+    <link rel="icon" href="img/favicon.ico" type="image/png" />
     <title>H5自适应双风格个人主页/引导页源码</title>
     <script src="js/25cfefa7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/font_3165812_pvad0am2nmp.css">
