--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <meta itemprop="image" content="./assets/9147.png" /> -->
     <meta name="google-adsense-account" content="ca-pub-1078287385751140">
     <link rel="icon" href="img/favicon.ico" type="image/png" />
-    <title>H5自适应双风格个人主页/引导页源码</title>
+    <title>阿离Alize的个人主页</title>
     <script src="js/25cfefa7b1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/font_3165812_pvad0am2nmp.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -219,58 +219,59 @@
         <div class="find">
             <h2 class="chtitle"><span>社交</span>媒体</h2>
             <div id="linkbox">
-                <a href="https://twitter.com/XXX" target="_blank">
-                    <div class="item" style="--color: rgba(40, 169, 224,0.3)">
-                        <div class="bg" style="background-color:rgb(40, 169, 224)"></div>
+                <!-- <a href="https://twitter.com/XXX" target="_blank">
+                    <div class="item" style="--color: rgba(0, 102, 255,0.3)">
+                        <div class="bg" style="background-color:rgb(0, 102, 255)"></div>
                         <div class="inner"><i class="fa-brands fa-x-twitter"></i><span>Twitter</span></div>
                     </div>
+                </a> -->
                 </a>
-                <a href="https://github.com/xxx" target="_blank">
+                <a href="https://space.bilibili.com/627539126?spm_id_from=333.1007.0.0" target="_blank">
+                    <div class="item" style="--color:rgba(251, 114, 153,0.3)">
+                        <div class="bg" style="background-color:rgb(251, 114, 153)"></div>
+                        <div class="inner"> <i class="fa-brands fa-bilibili"></i><span>Bilibili</span></div>
+                    </div>
+                    <!-- rgb(0, 102, 255) -->
+                <a href="https://xhslink.com/m/8894oBG9pEy" target="_blank">
+                    <div class="item" style="--color:rgba(228, 69, 69,0.3)">
+                        <div class="bg" style="background-color:rgb(228, 69, 69)"></div>
+                        <div class="inner"> <i class="fa-solid fa-book"></i><span>小红书</span></div>
+                    </div>
+                </a>
+                <a href="mailto:2860369855@qq.com" target="_blank">
+                    <div class="item" style="--color:rgba(247, 186, 11,0.3)">
+                        <div class="bg" style="background-color:rgb(247, 186, 11)"></div>
+                        <div class="inner"><i class="fa-solid fa-square-envelope"></i><span>邮箱</span></div>
+                    </div>
+                </a>
+                <a href="https://github.com/alizemina" target="_blank">
                     <div class="item" style="--color:rgba(53, 53, 53,0.3)">
                         <div class="bg" style="background-color:rgb(53, 53, 53)"></div>
                         <div class="inner"> <i class="fa-brands fa-github"></i><span>Github</span></div>
                     </div>
                 </a>
-                <a href="/static/img/gongzhonghao.jpg" target="_blank">
-                    <div class="item" style="--color:rgba(0, 102, 255,0.3)">
-                        <div class="bg" style="background-color:rgb(0, 102, 255)"></div>
-                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>公众号</span></div>
-                    </div>
-                </a>
-                <a href="mailto:xxxx@qq.com" target="_blank">
-                    <div class="item" style="--color:rgba(251, 114, 153,0.3)">
-                        <div class="bg" style="background-color:rgb(251, 114, 153)"></div>
-                        <div class="inner"><i class="fa-solid fa-square-envelope"></i><span>邮箱</span></div>
-                    </div>
-                </a>
-                <a href="https://t.me/quanshoulu" target="_blank">
-                    <div class="item" style="--color:rgba(35, 45, 55,0.3)">
-                        <div class="bg" style="background-color:rgb(35, 45, 55)"></div>
-                        <div class="inner"> <i class="fa-brands fa-telegram"></i><span>TG频道</span></div>
-                    </div>
-                </a>
-                <a href="/" target="_blank">
+                <a href="https://cdn.jsdelivr.net/gh/AlizeMina/alize@main/img/mmqrcode1772209121893.png" target="_blank">
                     <div class="item" style="--color:rgba(1, 193, 157,0.3)">
                         <div class="bg" style="background-color: rgb(1, 193, 157);"></div>
-                        <div class="inner"> <i class="fa-solid fa-blog"></i><span>Blog</span></div>
+                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>微信</span></div>
                     </div>
                 </a>
-                <a href="https://" target="_blank">
+                <a href="https://qm.qq.com/q/roIHSwHdrq" target="_blank">
                     <div class="item" style="--color:rgba(109, 136, 255)">
                         <div class="bg" style="background-color:rgb(109, 136, 255)"></div>
-                        <div class="inner"> <i class="fa-brands fa-pinterest"></i><span>QQ</span></div>
+                        <div class="inner"> <i class="fa-brands fa-qq"></i><span>QQ</span></div>
                     </div>
                 </a>
-                <a href="/static/img/weixin.png" target="_blank">
-                    <div class="item" style="--color:rgba(53, 57, 59)">
-                        <div class="bg" style="background-color: rgb(53, 57, 59);"></div>
-                        <div class="inner"> <i class="fa-brands fa-weixin"></i><span>微信号</span></div>
+                <a href="https://www.douyin.com/user/MS4wLjABAAAA3eM4oC_-vZDvLGOiIVhHnUtw2lCcNifSNl3uYII16KY" target="_blank">
+                    <div class="item" style="--color:rgba(0, 0, 0,0.3)">
+                        <div class="bg" style="background-color: rgb(0, 0, 0);"></div>
+                        <div class="inner"> <i class="fa-brands fa-tiktok"></i><span>抖音</span></div>
                     </div>
                 </a>
-                <a href="https://sspai.com/u/xxx/updates" target="_blank">
-                    <div class="item" style="--color:rgba(28, 64, 100)">
-                        <div class="bg" style="background-color:rgb(55, 127, 199)"></div>
-                        <div class="inner"><i class="fa-solid fa-user-astronaut"></i><span>少数派</span></div>
+                <a href="https://v.kuaishou.com/nmRdffUc" target="_blank">
+                    <div class="item" style="--color:rgba(199, 79, 55,0.3)">
+                        <div class="bg" style="background-color:rgb(199, 79, 55)"></div>
+                        <div class="inner"><i class="fa-solid fa-video"></i><span>快手</span></div>
                     </div>
                 </a>
             </div>
@@ -473,3 +474,4 @@
     <script src="js/clock.js"></script>
 </body>
 </html>
+
